[project]
name = "update-shodan"
version = "0.1.0"
description = "Python script to identify current IP address and update Shodan alert"
readme = "README.md"
authors = [
    { name = "Jon Mark Allen", email = "ubahmapk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "httpx>=0.28.1",
    "netaddr>=1.3.0",
    "pydantic>=2.10.3",
    "pytest>=8.3.4",
    "shodan>=1.31.0",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
]
