[project]
name = "update-shodan"
version = "0.2.2"
description = "Python script to identify current IP address and update Shodan alert"
readme = "README.md"
authors = [ { name = "Jon Mark Allen", email = "ubahmapk@proton.me" } ]
license = {file = "LICENSE"}
requires-python = ">=3.10"

dependencies = [
    "click>=8.1.7",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "netaddr>=1.3.0",
    "platformdirs>=4.3.6",
    "pydantic>=2.10.3",
    "pytest>=8.3.4",
    "shodan>=1.31.0",
    "typer>=0.15.1",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.9",
  "Topic :: Security",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Networking :: Monitoring",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/ubahmapk/update_shodan.git"
Issues = "https://github.com/ubahmapk/update_shodan/issues"

[project.scripts]
update-shodan = "update_shodan.cli:app"

[dependency-groups]
dev = [
    "hatchling>=1.26.3",
    "ipython>=8.30.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.3",
    "vermin>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
